test/fail/Issue1444.agda
{-# OPTIONS --rewriting #-}

module _ (R : Set) where

{-# REWRITE R #-}
